[package]
name = "gyo_core"
version = "0.1.0"
authors = ["Crux <lepus@keemail.me>"]
description = "Gyo format"
edition = "2021"
homepage = "https://github.com/crux161/gyo"
license = "MIT"
readme = "../../README.md"
repository = "https://github.com/crux161/gyo"
keywords = ["gyo", "gyosho", "wgsl", "graphics", "creative-coding"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
binrw = { workspace = true } 

# Compression
zstd = "0.13"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Graphics Types (We keep wgpu types for interoperability)
wgpu-types = "22.0"
