[package]
name = "hanga"
version = "0.1.0"
authors = ["Crux <lepus@keemail.me>"]
description = "Gyo format wgpu runtime"
edition = "2021"
homepage = "https://github.com/crux161/gyo"
license = "MIT"
readme = "README.md"
repository = "https://github.com/crux161/gyo"
keywords = ["gyo", "gyosho", "wgsl", "graphics", "creative-coding"]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
opt-level = 'z'

[dependencies]
wgpu = { workspace = true }
winit = { workspace = true }  # <--- MISSING LINE
bytemuck = { workspace = true }
anyhow = { workspace = true }
futures = "0.3"

gyo_core = { path = "../gyo_core" }
hanga_traits = { path = "../hanga_traits" }
zstd.workspace = true
bincode = "1.3"
binrw.workspace = true

[dev-dependencies]
env_logger = "0.11.8"
pollster = "0.4.0"
rand = "0.9.2"
