[package]
name = "hanga_traits"
version = "0.1.0"
authors = ["Crux <lepus@keemail.me>"]
description = "Gyo format base runtime"
edition = "2021"
homepage = "https://github.com/crux161/gyo"
license = "MIT"
readme = "README.md"
repository = "https://github.com/crux161/gyo"
keywords = ["gyo", "gyosho", "wgsl", "graphics", "creative-coding"]

[dependencies]
wgpu = { workspace = true } 
winit = { workspace = true }
anyhow = { workspace = true }

gyo_core = { version = "0.1", path = "../gyo_core" }
